css/myStyle.css
@charset "UTF-8";
/* CSS Document */

html, body {
  <link rel="preconnect"href="https://fonts.gstatic.com" > <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"rel="stylesheet" > ;
  font-size: 22px;
}

.container-fluid {
  padding-left: 80px;
  padding-right: 80px;
}

.navbar {
  margin-top: 25px;
  margin-bottom: 100px;
}

.navbar-nav {
  margin-left: auto !important;
}

mark {
	display: inline-block;
	background-color: transparent;
}

mark:hover {
  display: inline-block;
  line-height: 0em;
  padding-bottom: 0.6em;
  background-color: #F4EE49;
}

h1 {
  font-weight: regular;
  font-size: 3rem;
  color: #13022C;
}

.arrow-container {
  display: inline-block;
  margin-left: 25px;
}

.arrow-image {
  display: block;
  vertical-align: middle;
 
}

.social-container {
  display: inline-block;
  float:left;
  margin-right: 15px;
}

.navbar-logo {
	height: 30px;
	display: block; 
	padding-left: 4px;
}

hr {
	border-top: 5px solid rgba(0, 0, 0, 0.1);
	margin-top: 3px!important;
  
}

.fill {
    /*display: flex;*/
    align-items: center;
    overflow: hidden;
}

.fill img {
	object-fit: cover;
	width: 100%;
	height: 100%;
    }

